# robosandbox

./: .gitignore  HANDOVER.md  README.md  TODO.md  benchmark_results.json  pyproject.toml
.github/workflows/: ci.yml  docs.yml  release.yml
docs/design/: 2026-04-22-newton-integration-design.md
docs/site/: mkdocs.yml
docs/site/docs/: index.md  quickstart.md
docs/superpowers/specs/: 2026-04-18-mesh-import-design.md  2026-04-18-urdf-import-design.md  2026-04-21-examples-readme-design.md
examples/: README.md  custom_robot.py  custom_skill.py  custom_task.py  headless_eval.py  inspect_lerobot_dataset.py  list_ycb.py  llm_guided.py  newton_cloth_franka_showcase.py  newton_pick_cube_franka.py  procedural_scene.py  real_robot_swap.py  record_demo.py  replan_demo.py  run_custom_task.py  spawn_ycb_scene.py  vlm_tool_calling_walkthrough.py
examples/so101_handoff/: run_home_skill.py  so101_backend.py
examples/so_arm100/: migrate_lerobot_config.py  probe_hub_schemas.py  run_so100_policy.py  smoke_test.py  so_arm100.robosandbox.yaml
examples/tasks/: pick_unreachable_cube.yaml  pick_yellow_cube.yaml
scripts/: decompose_mesh.py  download_franka_visuals.py  generate_test_episode.py  make_deep_dive_choose_actuation_video.sh  make_deep_dive_choose_robot_video.sh  make_deep_dive_define_task_video.sh  make_deep_dive_graduate_video.sh  make_deep_dive_record_export_video.sh  make_deep_dive_run_inspect_video.sh  make_social_teaser_phase_video.sh  newton_dgxspark_showcase.sh  newton_probe_pick_cube_franka.sh  randomize_smoke.py  validate_eval_pipeline.sh
(+37 files in other folders)
