[project]
name = "robosandbox-workspace"
version = "0"
description = "Workspace root — not published"
requires-python = ">=3.10"

[tool.uv.workspace]
members = ["packages/*"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM", "RUF"]
ignore = ["E501"]
